--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -15,26 +15,34 @@ header img {
   width: 150px;
   /* margin-left: 200px; */
   height: 35vh;
+  
+}
+.container{
+  border: 2px solid;
+  background-color: white;
+  border-radius: 10px;
 }
 .h1 {
   text-align: center;
   text-decoration: underline;
+  
 }
 .h2 {
   align-items: center;
   text-align: center;
   text-decoration: underline;
 }
-h4 {
+.h4 {
   text-align: center;
+  text-decoration: black;
+  
 }
 .video {
-  display: flex;
   justify-content: center;
   align-items: center;
-  display: block;
   margin: 0 auto;
   width: 200px;
+  border-radius: 10px;
 }
 .estilopropio {
   font-family: Arial, Helvetica, sans-serif;
@@ -49,6 +57,26 @@ h4 {
   font-weight: bold;
   line-height: 2;
 }
+.Sesionkinesio{
+  margin: 0;
+  border:2px solid;
+  border-radius: 10px;
+  background-color: white;
+  align-items: center;
 
-@media screen and (min-width: 600px) {
+}
+.videokinesio{
+  justify-content: center;
+  width: 250px;
+  display: flex;
+  margin: 0 auto;
+  border:2px solid;
+  border-radius: 10px;
+  align-items: center;
+}
+.parrafofinal{
+  background-color: white;
+  text-align: center;
+  border: 2px solid;
+  border-radius: 10px;
 }
