coloque el logo en el index

--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -34,8 +34,10 @@ header img {
 }
 .h4 {
   text-align: center;
-  text-decoration: black;
-  
+
+}
+.h4 a{
+  color: black;
 }
 .video {
   justify-content: center;
