--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,15 +1,25 @@
+*{
+    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+}
 
 .bodys {
     color: rgb(15, 15, 15);
     background-image: url(/assets/images/Elegante\ y\ versátil\ presentación\ informe\ seo\ web\ azul.png);
     width: 100%;
 }
+.bodys2{
+color: white;
+background-image: url(/assets/images/Elegante\ y\ versátil\ presentación\ informe\ seo\ web\ azul.png);
+width: 100%;}
+
 header {
     width: 100%;
-    }
+}
 
 
-main{
+main {
     .container {
         background-color: white;
         border-radius: 10px;
@@ -57,19 +67,20 @@ div {
         border: 2px solid;
         border-radius: 10px;
         background-color: white;
-        align-items: center; 
+        align-items: center;
     }
-            .Titulo {
-                text-decoration: underline;
-                background-color: white;
-                text-align: center;
-                border: 2px solid;
-                border-radius: 10px;
-                color: black;
 
-            }
-        }
-    
+    .Titulo {
+        text-decoration: underline;
+        background-color: white;
+        text-align: center;
+        border: 2px solid;
+        border-radius: 10px;
+        color: black;
+
+    }
+}
+
 div {
     .videokinesio {
         justify-content: center;
@@ -81,20 +92,38 @@ div {
         align-items: center;
     }
 }
-
-footer {
+footer{
     .parrafofinal {
         background-color: white;
         text-align: center;
         border: 2px solid;
         border-radius: 10px;
     }
-
-    .h4 {
+        
+}
+footer{
+    h3{
+        text-align: center;
+        color:white;
+}
+    h4{
         text-align: center;
     }
-
-    .h4 a {
-        color: white
+    .h4 a{ 
+        color:white;
     }
+}
+.parrafoquiro {
+    text-align: start;
+    font-weight: bold;
+    line-height: 2;
+}
+
+.videoquiropraxia {
+    justify-content: center;
+    width: 340px;
+    display: flex;
+    margin: 0 auto;
+    border: 20px solid white;
+    border-radius: 20px;
 }
