--- a/scss/_bodys1.scss
+++ b/scss/_bodys1.scss
@@ -6,6 +6,6 @@
 
 .bodys {
     color: $negro;
-    background-image: url(/assets/images/Elegante\ y\ versátil\ presentación\ informe\ seo\ web\ azul.png);
+    background-color: rgb(28, 28, 194);
     width: 100%;
 }
