--- a/scss/_bodys2.scss
+++ b/scss/_bodys2.scss
@@ -8,5 +8,5 @@
 
 .bodys2{
 color:$blanco;
-background-image: url(/assets/images/Elegante\ y\ versátil\ presentación\ informe\ seo\ web\ azul.png);
+background-color: rgb(28, 28, 194);
 width: 100%;}
